# nup_poder_judiciario

./: README.md  pyproject.toml
docs/: distribution.md  testing.md
src/nup_poder_judiciario/: __init__.py  nup.py
tests/: test_nup.py
