[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nup_poder_judiciario"
version = "0.0.3"
authors = [
  { name="Rafael Leite", email="rafxel@gmail.com" },
]
description = "Funcionalidades relacionadas à numeração única de processos do Poder Judiciário"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rafxel/nup_poder_judiciario"
"Bug Tracker" = "https://github.com/rafxel/nup_poder_judiciario/issues"